updates to design and video page

--- a/index.css
+++ b/index.css
@@ -1,7 +1,19 @@
+    #name {
+      font-family:  arial;
+      color: rgb(0, 127, 255);
+      letter-spacing: 1.5px;
+      /*font-family:  monospace;*/
+      font-size: 16px;
+      font-weight:  400;
+    }
+
+
+
 <!-- @font-face {
   font-family: "Graphik";
   src: url("fonts/Graphik.ttf");
   }
+
 
 body {
   margin: 0px;
