--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
-    #name {
-      font-family:  arial;
-      color: rgb(0, 127, 255);
-      letter-spacing: 1.5px;
-      /*font-family:  monospace;*/
-      font-size: 16px;
-      font-weight:  400;
+    body {
+      width: 900px;
+      margin: auto;
+      letter-spacing: 0.28px;
+      /*font-family: monospace;*/
+      /*font-family: 'Inter';font-size: 22px;*/
+  /*        text-decoration: none;*/
     }
 
 
